--- a/app/src/main/res/layout/second_content.xml
+++ b/app/src/main/res/layout/second_content.xml
@@ -16,9 +16,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/user_text_to_save"/>
+            android:id="@+id/user_text_to_save"
+            android:hint="Put Number of Sets"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -45,6 +46,25 @@
             android:hint="hallo"
             android:textSize="15sp"
             android:id="@+id/restored"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save new Database"
+            android:onClick="make_new_db"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="put something"
+            android:textSize="15sp"
+            android:id="@+id/newdb"/>
     </LinearLayout>
 
 
