--- a/app/src/main/res/layout/exercise_main.xml
+++ b/app/src/main/res/layout/exercise_main.xml
@@ -9,45 +9,48 @@
     android:text="blaa"
     android:textSize="30sp"
     android:id="@+id/workout_name_in_ex"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Set"
+            android:padding="10dp"
+            android:layout_margin="0dp"
+            android:onClick="AddNewSet"
+            />
+        <EditText
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:id="@+id/user_reps_input"/>
+        <EditText
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:id="@+id/user_weight_input"/>
+    </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
-    android:layout_height="400dp"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="center">
     <ListView
-        android:layout_width="250dp"
-        android:layout_height="match_parent"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
         android:id="@+id/listview_sets"
-        android:layout_marginLeft="-5dp">
+        android:gravity="center">
     </ListView>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Finish Exercise"/>
+        android:text="Finish Exercise"
+        android:layout_gravity="center"/>
 </LinearLayout>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_gravity="center">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Set"
-        android:padding="10dp"
-        android:layout_margin="0dp"
-        android:onClick="AddNewSet"
-        />
-    <EditText
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:id="@+id/user_reps_input"/>
-    <EditText
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:id="@+id/user_weight_input"/>
-</LinearLayout>
+
 
 
 
