--- a/app/src/main/res/layout/exercise_main.xml
+++ b/app/src/main/res/layout/exercise_main.xml
@@ -48,7 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finish Exercise"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:onClick="finish" />
 </LinearLayout>
 
 
