--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,8 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="Orange" parent="android:Theme.DeviceDefault.Light">
+        <item name="android:colorAccent">@color/accent_material_light_1</item>
+    </style>
 </resources>
