--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#E50000</color>
     <color name="accent_material_light_1">#f5b800</color>
     <color name="accent_material_light_2">#f5b800</color>
 </resources>
