MainActivity no more UserInput, jump to new or existing Workout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorRed">#E50000</color>
     <color name="accent_material_light_1">#f5b800</color>
     <color name="accent_material_light_2">#f5b800</color>
+    <color name="accent_material_light_3">#f5b800</color>
 </resources>
