--- a/app/src/main/res/layout/exercise_main.xml
+++ b/app/src/main/res/layout/exercise_main.xml
@@ -45,7 +45,9 @@
         android:layout_width="350dp"
         android:layout_height="350dp"
         android:id="@+id/listview_sets"
-        android:gravity="center">
+        android:gravity="center"
+        android:divider="@null"
+        android:dividerHeight="0dp">
     </ListView>
     <Button
         android:layout_width="wrap_content"
