database debuggin, hopefully everything fine now

--- a/app/src/main/res/layout/exercise_main.xml
+++ b/app/src/main/res/layout/exercise_main.xml
@@ -37,24 +37,26 @@
             android:id="@+id/user_weight_input"/>
     </LinearLayout>
 <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_gravity="center">
+    android:orientation="vertical">
     <ListView
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
         android:id="@+id/listview_sets"
-        android:gravity="center"
         android:divider="@null"
-        android:dividerHeight="0dp">
+        android:dividerHeight="0dp"
+        android:layout_marginLeft="@dimen/multiRowMargin"
+        android:layout_marginRight="@dimen/multiRowMargin"
+        >
     </ListView>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finish Exercise"
         android:layout_gravity="center"
-        android:onClick="finish" />
+        android:onClick="finish"
+        android:layout_margin="@dimen/multiRowMargin"/>
 </LinearLayout>
 
 
