--- a/app/src/main/res/layout/exercise_main_static.xml
+++ b/app/src/main/res/layout/exercise_main_static.xml
@@ -13,16 +13,16 @@
     android:layout_marginTop="@dimen/multiRowMargin"/>
 
 <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/multiRowMargin">
+    android:layout_margin="@dimen/multiRowMargin"
+    android:gravity="center">
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listview_sets_static"
-        android:gravity="center"
         android:divider="@null"
         android:dividerHeight="0dp">
     </ListView>
