--- a/app/src/main/res/layout/excercise_row_layout.xml
+++ b/app/src/main/res/layout/excercise_row_layout.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:gravity="center"
     tools:context="asdf.listviews.app.MainActivity">
 
 
@@ -12,10 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewEx"
-        android:layout_gravity="center"
-        android:textSize="20sp"
+        android:textSize="25sp"
         android:textStyle="normal"
-        android:padding="15dp"
-        android:layout_marginLeft="-10dp"/>
+        android:padding="5dp"
+        />
 
 </LinearLayout>
