--- a/app/src/main/res/layout/sets_row_layout.xml
+++ b/app/src/main/res/layout/sets_row_layout.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context="asdf.listviews.app.MainActivity">
+    tools:context="asdf.listviews.app.MainActivity"
+    android:gravity="center">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textViewSets"
-        android:layout_gravity="center"
         android:textSize="20sp"
+        android:padding="5dp"
         android:textStyle="normal"
-        android:padding="15dp"
-        android:layout_marginLeft="-10dp"/>
+        />
 
 </LinearLayout>
