--- a/app/src/main/res/layout/exercise_main_static.xml
+++ b/app/src/main/res/layout/exercise_main_static.xml
@@ -1,31 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Exercise Name"
-    android:textSize="30sp"
+    android:textSize="25sp"
     android:layout_gravity="center"
     android:id="@+id/workout_name_in_ex_static"
     android:layout_marginTop="@dimen/multiRowMargin"/>
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="350dp"
     android:orientation="vertical"
     android:layout_gravity="center"
     android:layout_margin="@dimen/multiRowMargin"
     android:gravity="center">
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:id="@+id/listview_sets_static"
         android:divider="@null"
-        android:dividerHeight="0dp">
+        android:dividerHeight="0dp"
+        android:layout_weight="50">
     </ListView>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Finish Exercise"
+        android:layout_gravity="center"
+        android:onClick="finish"
+        android:layout_margin="@dimen/multiRowMargin"
+        android:id="@+id/sets_exit_button_static"
+        android:layout_weight="1"/>
 </LinearLayout>
 
 
