--- a/app/src/main/res/layout/workout_main_static.xml
+++ b/app/src/main/res/layout/workout_main_static.xml
@@ -10,7 +10,8 @@
     android:textSize="25sp"
     android:id="@+id/workout_name_static"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/multiRowMargin"/>
+    android:layout_margin="@dimen/multiRowMargin"
+    android:textStyle="bold"/>
 
     <ListView
         android:layout_width="match_parent"
