--- a/app/src/main/res/layout/workout_main.xml
+++ b/app/src/main/res/layout/workout_main.xml
@@ -10,36 +10,55 @@
     android:textSize="25sp"
     android:id="@+id/workout_name"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/multiRowMargin"/>
+    android:layout_margin="@dimen/multiRowMargin"
+    android:textStyle="bold"/>
 <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_gravity="center">
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Excercise Name"
-        android:layout_gravity="bottom"
-        android:id="@+id/user_Exercise_Input"/>
-    <Button
+        android:id="@+id/user_Exercise_Input"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/ExNewButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add new Excercise"
-        android:padding="10dp"
-        android:layout_margin="0dp"
+        android:src="@drawable/addnewcross"
         android:onClick="AddNewExercise"
+        android:layout_gravity="center|right"
+        android:layout_marginRight="18dp"
         />
 
 </LinearLayout>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/listview_exercises"
         android:layout_margin="@dimen/multiRowMargin"
         android:divider="@null"
-        android:dividerHeight="0dp">
+        android:dividerHeight="0dp"
+        android:layout_weight="10">
     </ListView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="@string/longpressdelete"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:layout_gravity="bottom"
+        android:textColor="@color/colorGreen"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
 </LinearLayout>
