--- a/app/src/main/res/layout/exercise_main.xml
+++ b/app/src/main/res/layout/exercise_main.xml
@@ -94,17 +94,47 @@
     android:layout_width="match_parent"
     android:layout_height="260dp"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="horizontal"
+        android:layout_marginLeft="@dimen/multiRowMargin"
+        android:layout_marginRight="@dimen/multiRowMargin"
+        android:layout_marginBottom="@dimen/multiRowMargin"
+        >
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/listview_sets"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:layout_marginLeft="@dimen/multiRowMargin"
-        android:layout_marginRight="@dimen/multiRowMargin"
         android:layout_weight="10"
         >
     </ListView>
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:id="@+id/listview_sets_old_1"
+            android:layout_weight="1"
+            android:background="@drawable/border"
+            >
+        </ListView>
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:id="@+id/listview_sets_old_2"
+            android:layout_weight="1"
+            android:background="@drawable/border"
+            android:layout_marginTop="-2dp"
+            >
+        </ListView>
+        </LinearLayout>
+    </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
