--- a/app/src/main/res/layout/workout_main.xml
+++ b/app/src/main/res/layout/workout_main.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <TextView
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="blaa"
     android:textSize="25sp"
     android:id="@+id/workout_name"
-    android:layout_gravity="center"
-    android:layout_margin="@dimen/multiRowMargin"
-    android:textStyle="bold"/>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_gravity="center">
+    android:layout_gravity="top"
+    android:textStyle="bold"
+    android:gravity="center"
+    android:padding="20dp"
+    android:background="@color/colorGreen_dark"
+    android:textColor="@color/colorWhite"
+    />
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/ExNewButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/addnewcross"
+        android:onClick="AddNewExercise"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="18dp"
+        android:layout_marginTop="-30dp"
+        android:layout_below="@+id/workout_name"
+        />
+
 
     <EditText
         android:layout_width="wrap_content"
@@ -24,41 +34,34 @@
         android:hint="Excercise Name"
         android:id="@+id/user_Exercise_Input"
         android:gravity="center"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/workout_name"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"
         />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/ExNewButton"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/addnewcross"
-        android:onClick="AddNewExercise"
-        android:layout_gravity="center|right"
-        android:layout_marginRight="18dp"
-        />
-
-</LinearLayout>
+        android:text="@string/longpressdelete"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/colorGreen"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_alignParentBottom="true"/>
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/listview_exercises"
         android:layout_margin="@dimen/multiRowMargin"
         android:divider="@null"
         android:dividerHeight="0dp"
-        android:layout_weight="10">
+        android:layout_below="@+id/user_Exercise_Input"
+        android:paddingBottom="30dp"
+        >
     </ListView>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:text="@string/longpressdelete"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:layout_gravity="bottom"
-        android:textColor="@color/colorGreen"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
-</LinearLayout>
+
+</RelativeLayout>
