--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,27 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorRed">#FF6666</color>
-    <color name="colorGreen">#4ca64c</color>
+
+
+    <color name="colorPurple_light">#CE93D8</color>
+    <color name="colorPurple">#AB47BC</color>
+    <color name="colorPurple_dark">#8E24AA</color>
+
+    <color name="colorGreen_light">#A5D6A7</color>
+    <color name="colorGreen">#66BB6A</color>
+    <color name="colorGreen_dark">#43A047</color>
+    <color name="colorGreen_fab">#9CCC65</color>
+
+    <color name="colorWhite">#FFFFFF</color>
+
+    <color name="colorRed_light">#E57373</color>
+    <color name="colorRed">#F44336</color>
+    <color name="colorRed_dark">#D32F2F</color>
+
+
     <color name="accent_material_light_1">#f5b800</color>
-    <color name="accent_material_light_2">#f5b800</color>
-    <color name="accent_material_light_3">#f5b800</color>
+    <color name="accent_material_light_2">#ffb74d</color>
+    <color name="accent_material_light_3">#FB8C00</color>
     <color name="colorBlue">#4c4cff</color>
+    <color name="transparent">#00ffff</color>
 </resources>
