--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,42 +6,51 @@
     android:layout_height="match_parent"
     android:id="@+id/framemain"
 
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:orientation="vertical"
     tools:context="com.naien.simpleworkouttracker.app.MainActivity"
-    tools:showIn="@layout/activity_main">
+    >
 
-
-    <LinearLayout
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/mainbg"
+        android:scaleType="centerCrop" />
+    <TextView
+        android:id="@+id/CurrentWorkoutMain"
+        android:gravity="center_horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="500dp"
-        android:orientation="vertical"
-        android:layout_gravity="top">
+        android:layout_height="wrap_content"
+        android:text="Nothing new Yet"
+        android:textColor="@android:color/white"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:padding="5dp"/>
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ListViewWorkouts"
-            android:dividerHeight="1dp"
-            android:layout_margin="@dimen/multiRowMargin"
-            android:divider="@color/accent_material_light_2"
-            android:background="@drawable/border_orange"
-            />
-    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show All"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="70dp"
+        android:id="@+id/ButtonShowAll"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="76dp"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="15dp"
-        android:id="@+id/rellayoutfab">
+        android:id="@+id/rellayoutfab"
+        android:background="@color/colorWhite_transparent">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Add a new Workout"
             android:id="@+id/InfoNewWorkout"
             android:layout_marginLeft="40dp"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="27dp"
+
+
             />
         <ImageView
             android:layout_width="100dp"
@@ -50,7 +59,7 @@
             android:id="@+id/infoarrow"
             android:layout_toRightOf="@id/InfoNewWorkout"
             android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="5dp"
             android:padding="0dp"
 
             />
@@ -60,10 +69,12 @@
     android:id="@+id/fabAddWorkout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/fab_margin"
+    android:layout_marginRight="@dimen/fab_margin"
+    android:layout_marginBottom="13dp"
     android:layout_gravity="bottom|right"
-    android:onClick="makeNewWorkout"
     android:src="@drawable/addnewcross"
     />
+
+
 
 </FrameLayout>
