--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:statusBarColor">@color/colorGreen_dark</item>
     </style>
 
-    <style name="green.ActionBar" parent="OrangeApp">
+    <style name="green.ActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">@color/colorGreen</item>
         <item name="android:statusBarColor">@color/colorGreen_dark</item>
     </style>
