--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,62 +19,49 @@
     <TextView
         android:id="@+id/CurrentWorkoutMain"
         android:gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nothing new Yet"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center"
-        android:textSize="25sp"
-        android:padding="5dp"/>
-
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Show All"
-        android:layout_gravity="center|bottom"
-        android:layout_marginBottom="70dp"
-        android:id="@+id/ButtonShowAll"/>
-
-    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="76dp"
-        android:layout_gravity="bottom"
-        android:id="@+id/rellayoutfab"
-        android:background="@color/colorWhite_transparent">
-        <TextView
+        android:layout_height="wrap_content"
+        android:text="Go to the Gym allready!"
+        android:textColor="@android:color/white"
+        android:layout_centerInParent="true"
+        android:textSize="20sp"
+        android:padding="-1dp"/>
+
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabAddWorkout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add a new Workout"
-            android:id="@+id/InfoNewWorkout"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="27dp"
-
-
+            android:src="@drawable/addnewcross"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="@dimen/fab_margin"
+            android:layout_marginBottom="@dimen/fab_margin"
             />
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:src="@drawable/arrow"
-            android:id="@+id/infoarrow"
-            android:layout_toRightOf="@id/InfoNewWorkout"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:padding="0dp"
 
-            />
-    </RelativeLayout>
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPurple_dark"
+        android:id="@+id/myToolbar"
+        android:visibility="invisible">
 
-<android.support.design.widget.FloatingActionButton
-    android:id="@+id/fabAddWorkout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginRight="@dimen/fab_margin"
-    android:layout_marginBottom="13dp"
-    android:layout_gravity="bottom|right"
-    android:src="@drawable/addnewcross"
-    />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show All"
+            android:id="@+id/ButtonShowAll"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="new WO"
+            android:id="@+id/ButtonNewWo"/>
 
 
+    </android.support.v7.widget.Toolbar>
 
-</FrameLayout>
+
+
+
+</RelativeLayout>
